Backend & FrontEnd : Implementing the groupChat
