# real_time/front_app/src/services/models/group-message-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface GroupMessageDto {
+  content?: string;
+  groupId?: number;
+  senderId?: number;
+  senderName?: string;
+  sentAt?: string;
+}
