# real_time/front_app/src/services/models/page-response-group-message-dto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { GroupMessageDto } from '../models/group-message-dto';
+export interface PageResponseGroupMessageDto {
+  content?: Array<GroupMessageDto>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
