# real_time/real_time/src/main/java/com/example/real_time/GroupMessage/GroupMessageDto.java
@@ -1,5 +1,6 @@
 package com.example.real_time.GroupMessage;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -11,9 +12,11 @@ import java.time.LocalDateTime;
 @NoArgsConstructor
 @Data
 @Builder
+@JsonInclude(JsonInclude.Include.NON_NULL)
 public class GroupMessageDto {
     private Integer groupId;
     private Integer senderId;
     private String content;
     private LocalDateTime sentAt;
+    private String senderName;
 }
